Removing display transition for overflow issue

--- a/single-menu-dropdown.css
+++ b/single-menu-dropdown.css
@@ -8,9 +8,6 @@
     right: unset;
     width: 300px;
     background: white;
-    opacity: 0;
-    visibility: hidden;
-    pointer-events: none;
     text-align: left;
     padding: 0.75rem 1.5rem;
     border-radius: 10px;
@@ -21,11 +18,6 @@
     box-shadow: 0 0 10px 2px rgba(0, 30, 0, 0.15);
     z-index: 9998;
     cursor: auto;
-}
-.menu-id.active {
-    opacity: 1;
-    visibility: visible;
-    pointer-events: unset;
 }
 .menu-id::before {
     content: "";
